projectcompiler/src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from Parser.y
-----------------------------------------------------------------------------


terminal String is unused
terminal Integer is unused
terminal Obj is unused
terminal Boolean is unused
terminal true is unused
terminal false is unused
terminal Nothing is unused
terminal none is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parserCalc -> Prog                          (0)
	Prog -> Cl Stmts                                   (1)
	Cl ->                                              (2)
	Cl -> Cl ClassSigBody                              (3)
	ClassSigBody -> ClassSignature ClassBody           (4)
	ClassSignature -> CS                               (5)
	ClassSignature -> CS extends ident                 (6)
	CS -> class ident '(' FormalArgs ')'               (7)
	FormalArgs ->                                      (8)
	FormalArgs -> ident ':' ident IDs                  (9)
	IDs ->                                             (10)
	IDs -> IDs ',' ident ':' ident                     (11)
	ClassBody -> '{' Stmts Method '}'                  (12)
	Method ->                                          (13)
	Method -> Method MethodRest                        (14)
	MethodRest -> MR StmtBlock                         (15)
	MethodRest -> MR ':' ident StmtBlock               (16)
	MR -> def ident '(' FormalArgs ')'                 (17)
	StmtBlock -> '{' Stmts '}'                         (18)
	Stmts ->                                           (19)
	Stmts -> Stmts Stmt                                (20)
	Stmt -> IfStmt EStmt                               (21)
	Stmt -> while RExpr StmtBlock                      (22)
	Stmt -> LExpr AStmt                                (23)
	Stmt -> LExpr ':' ident AStmt                      (24)
	Stmt -> RExpr ';'                                  (25)
	Stmt -> return ';'                                 (26)
	Stmt -> return RExpr ';'                           (27)
	Stmt -> Typecase                                   (28)
	IfStmt -> if RExpr StmtBlock                       (29)
	EStmt -> ElifStmt ElseStmt                         (30)
	ElifStmt ->                                        (31)
	ElifStmt -> ElifStmt elif RExpr StmtBlock          (32)
	ElseStmt ->                                        (33)
	ElseStmt -> else StmtBlock                         (34)
	AStmt -> '=' RExpr ';'                             (35)
	Typecase -> typecase RExpr '{' TypeAlternative '}'   (36)
	TypeAlternative ->                                 (37)
	TypeAlternative -> TypeAlternative ident ':' ident StmtBlock   (38)
	LExpr -> ident                                     (39)
	LExpr -> RExpr '.' ident                           (40)
	RExpr -> string_literal                            (41)
	RExpr -> integer_literal                           (42)
	RExpr -> LExpr                                     (43)
	RExpr -> RExpr '+' RExpr                           (44)
	RExpr -> RExpr '-' RExpr                           (45)
	RExpr -> RExpr '*' RExpr                           (46)
	RExpr -> RExpr '/' RExpr                           (47)
	RExpr -> '-' RExpr                                 (48)
	RExpr -> '(' RExpr ')'                             (49)
	RExpr -> RExpr '==' RExpr                          (50)
	RExpr -> RExpr '<=' RExpr                          (51)
	RExpr -> RExpr '<' RExpr                           (52)
	RExpr -> RExpr '>=' RExpr                          (53)
	RExpr -> RExpr '>' RExpr                           (54)
	RExpr -> RExpr and RExpr                           (55)
	RExpr -> RExpr or RExpr                            (56)
	RExpr -> not RExpr                                 (57)
	RExpr -> RExpr '.' ident '(' ActualArgs ')'        (58)
	RExpr -> ident '(' ActualArgs ')'                  (59)
	ActualArgs ->                                      (60)
	ActualArgs -> RExpr ActArg                         (61)
	ActArg ->                                          (62)
	ActArg -> ActArg ',' RExpr                         (63)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	ident          { ID $$ }
	integer_literal{ INT $$ }
	string_literal { STRINGLITERAL $$ }
	class          { CLASS }
	def            { DEF }
	extends        { EXTENDS }
	if             { IF }
	elif           { ELIF }
	else           { ELSE }
	while          { WHILE }
	return         { RETURN }
	typecase       { TYPECASE }
	String         { STRING }
	Integer        { INTEGER }
	Obj            { OBJ }
	Boolean        { BOOLEAN }
	true           { TRUE }
	false          { FALSE }
	and            { AND }
	or             { OR }
	not            { NOT }
	Nothing        { NOTHING }
	none           { NONE }
	'='            { GETS }
	'+'            { PLUS }
	'-'            { MINUS }
	'*'            { TIMES }
	'/'            { DIVIDE }
	'=='           { EQUALS }
	'>='           { ATMOST }
	'<'            { LESS }
	'<='           { ATLEAST }
	'>'            { MORE }
	'{'            { LBRACE }
	'}'            { RBRACE }
	'('            { LPAREN }
	')'            { RPAREN }
	','            { COMMA }
	';'            { SEMICOLON }
	'.'            { DOT }
	':'            { COLON }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parserCalc rule  0
	Prog            rule  1
	Cl              rules 2, 3
	ClassSigBody    rule  4
	ClassSignature  rules 5, 6
	CS              rule  7
	FormalArgs      rules 8, 9
	IDs             rules 10, 11
	ClassBody       rule  12
	Method          rules 13, 14
	MethodRest      rules 15, 16
	MR              rule  17
	StmtBlock       rule  18
	Stmts           rules 19, 20
	Stmt            rules 21, 22, 23, 24, 25, 26, 27, 28
	IfStmt          rule  29
	EStmt           rule  30
	ElifStmt        rules 31, 32
	ElseStmt        rules 33, 34
	AStmt           rule  35
	Typecase        rule  36
	TypeAlternative rules 37, 38
	LExpr           rules 39, 40
	RExpr           rules 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59
	ActualArgs      rules 60, 61
	ActArg          rules 62, 63

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	ident          reduce using rule 2
	integer_literalreduce using rule 2
	string_literal reduce using rule 2
	class          reduce using rule 2
	if             reduce using rule 2
	while          reduce using rule 2
	return         reduce using rule 2
	typecase       reduce using rule 2
	not            reduce using rule 2
	'-'            reduce using rule 2
	'('            reduce using rule 2
	%eof           reduce using rule 2

	Prog           goto state 3
	Cl             goto state 2

State 1



	Cl             goto state 2

State 2

	Prog -> Cl . Stmts                                  (rule 1)
	Cl -> Cl . ClassSigBody                             (rule 3)

	ident          reduce using rule 19
	integer_literalreduce using rule 19
	string_literal reduce using rule 19
	class          shift, and enter state 8
	if             reduce using rule 19
	while          reduce using rule 19
	return         reduce using rule 19
	typecase       reduce using rule 19
	not            reduce using rule 19
	'-'            reduce using rule 19
	'('            reduce using rule 19
	%eof           reduce using rule 19

	ClassSigBody   goto state 4
	ClassSignature goto state 5
	CS             goto state 6
	Stmts          goto state 7

State 3

	%start_parserCalc -> Prog .                         (rule 0)

	%eof           accept


State 4

	Cl -> Cl ClassSigBody .                             (rule 3)

	ident          reduce using rule 3
	integer_literalreduce using rule 3
	string_literal reduce using rule 3
	class          reduce using rule 3
	if             reduce using rule 3
	while          reduce using rule 3
	return         reduce using rule 3
	typecase       reduce using rule 3
	not            reduce using rule 3
	'-'            reduce using rule 3
	'('            reduce using rule 3
	%eof           reduce using rule 3


State 5

	ClassSigBody -> ClassSignature . ClassBody          (rule 4)

	'{'            shift, and enter state 27

	ClassBody      goto state 26

State 6

	ClassSignature -> CS .                              (rule 5)
	ClassSignature -> CS . extends ident                (rule 6)

	extends        shift, and enter state 25
	'{'            reduce using rule 5


State 7

	Prog -> Cl Stmts .                                  (rule 1)
	Stmts -> Stmts . Stmt                               (rule 20)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	if             shift, and enter state 18
	while          shift, and enter state 19
	return         shift, and enter state 20
	typecase       shift, and enter state 21
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24
	%eof           reduce using rule 1

	Stmt           goto state 10
	IfStmt         goto state 11
	Typecase       goto state 12
	LExpr          goto state 13
	RExpr          goto state 14

State 8

	CS -> class . ident '(' FormalArgs ')'              (rule 7)

	ident          shift, and enter state 9


State 9

	CS -> class ident . '(' FormalArgs ')'              (rule 7)

	'('            shift, and enter state 58


State 10

	Stmts -> Stmts Stmt .                               (rule 20)

	ident          reduce using rule 20
	integer_literalreduce using rule 20
	string_literal reduce using rule 20
	def            reduce using rule 20
	if             reduce using rule 20
	while          reduce using rule 20
	return         reduce using rule 20
	typecase       reduce using rule 20
	not            reduce using rule 20
	'-'            reduce using rule 20
	'}'            reduce using rule 20
	'('            reduce using rule 20
	%eof           reduce using rule 20


State 11

	Stmt -> IfStmt . EStmt                              (rule 21)

	ident          reduce using rule 31
	integer_literalreduce using rule 31
	string_literal reduce using rule 31
	def            reduce using rule 31
	if             reduce using rule 31
	elif           reduce using rule 31
	else           reduce using rule 31
	while          reduce using rule 31
	return         reduce using rule 31
	typecase       reduce using rule 31
	not            reduce using rule 31
	'-'            reduce using rule 31
	'}'            reduce using rule 31
	'('            reduce using rule 31
	%eof           reduce using rule 31

	EStmt          goto state 56
	ElifStmt       goto state 57

State 12

	Stmt -> Typecase .                                  (rule 28)

	ident          reduce using rule 28
	integer_literalreduce using rule 28
	string_literal reduce using rule 28
	def            reduce using rule 28
	if             reduce using rule 28
	while          reduce using rule 28
	return         reduce using rule 28
	typecase       reduce using rule 28
	not            reduce using rule 28
	'-'            reduce using rule 28
	'}'            reduce using rule 28
	'('            reduce using rule 28
	%eof           reduce using rule 28


State 13

	Stmt -> LExpr . AStmt                               (rule 23)
	Stmt -> LExpr . ':' ident AStmt                     (rule 24)
	RExpr -> LExpr .                                    (rule 43)

	and            reduce using rule 43
	or             reduce using rule 43
	'='            shift, and enter state 54
	'+'            reduce using rule 43
	'-'            reduce using rule 43
	'*'            reduce using rule 43
	'/'            reduce using rule 43
	'=='           reduce using rule 43
	'>='           reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'>'            reduce using rule 43
	';'            reduce using rule 43
	'.'            reduce using rule 43
	':'            shift, and enter state 55

	AStmt          goto state 53

State 14

	Stmt -> RExpr . ';'                                 (rule 25)
	LExpr -> RExpr . '.' ident                          (rule 40)
	RExpr -> RExpr . '+' RExpr                          (rule 44)
	RExpr -> RExpr . '-' RExpr                          (rule 45)
	RExpr -> RExpr . '*' RExpr                          (rule 46)
	RExpr -> RExpr . '/' RExpr                          (rule 47)
	RExpr -> RExpr . '==' RExpr                         (rule 50)
	RExpr -> RExpr . '<=' RExpr                         (rule 51)
	RExpr -> RExpr . '<' RExpr                          (rule 52)
	RExpr -> RExpr . '>=' RExpr                         (rule 53)
	RExpr -> RExpr . '>' RExpr                          (rule 54)
	RExpr -> RExpr . and RExpr                          (rule 55)
	RExpr -> RExpr . or RExpr                           (rule 56)
	RExpr -> RExpr . '.' ident '(' ActualArgs ')'       (rule 58)

	and            shift, and enter state 40
	or             shift, and enter state 41
	'+'            shift, and enter state 42
	'-'            shift, and enter state 43
	'*'            shift, and enter state 44
	'/'            shift, and enter state 45
	'=='           shift, and enter state 46
	'>='           shift, and enter state 47
	'<'            shift, and enter state 48
	'<='           shift, and enter state 49
	'>'            shift, and enter state 50
	';'            shift, and enter state 51
	'.'            shift, and enter state 52


State 15

	LExpr -> ident .                                    (rule 39)
	RExpr -> ident . '(' ActualArgs ')'                 (rule 59)

	and            reduce using rule 39
	or             reduce using rule 39
	'='            reduce using rule 39
	'+'            reduce using rule 39
	'-'            reduce using rule 39
	'*'            reduce using rule 39
	'/'            reduce using rule 39
	'=='           reduce using rule 39
	'>='           reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'>'            reduce using rule 39
	'{'            reduce using rule 39
	'('            shift, and enter state 39
	')'            reduce using rule 39
	','            reduce using rule 39
	';'            reduce using rule 39
	'.'            reduce using rule 39
	':'            reduce using rule 39


State 16

	RExpr -> integer_literal .                          (rule 42)

	and            reduce using rule 42
	or             reduce using rule 42
	'+'            reduce using rule 42
	'-'            reduce using rule 42
	'*'            reduce using rule 42
	'/'            reduce using rule 42
	'=='           reduce using rule 42
	'>='           reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'>'            reduce using rule 42
	'{'            reduce using rule 42
	')'            reduce using rule 42
	','            reduce using rule 42
	';'            reduce using rule 42
	'.'            reduce using rule 42


State 17

	RExpr -> string_literal .                           (rule 41)

	and            reduce using rule 41
	or             reduce using rule 41
	'+'            reduce using rule 41
	'-'            reduce using rule 41
	'*'            reduce using rule 41
	'/'            reduce using rule 41
	'=='           reduce using rule 41
	'>='           reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'>'            reduce using rule 41
	'{'            reduce using rule 41
	')'            reduce using rule 41
	','            reduce using rule 41
	';'            reduce using rule 41
	'.'            reduce using rule 41


State 18

	IfStmt -> if . RExpr StmtBlock                      (rule 29)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 38

State 19

	Stmt -> while . RExpr StmtBlock                     (rule 22)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 37

State 20

	Stmt -> return . ';'                                (rule 26)
	Stmt -> return . RExpr ';'                          (rule 27)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24
	';'            shift, and enter state 36

	LExpr          goto state 30
	RExpr          goto state 35

State 21

	Typecase -> typecase . RExpr '{' TypeAlternative '}'    (rule 36)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 34

State 22

	RExpr -> not . RExpr                                (rule 57)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 33

State 23

	RExpr -> '-' . RExpr                                (rule 48)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 32

State 24

	RExpr -> '(' . RExpr ')'                            (rule 49)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 31

State 25

	ClassSignature -> CS extends . ident                (rule 6)

	ident          shift, and enter state 29


State 26

	ClassSigBody -> ClassSignature ClassBody .          (rule 4)

	ident          reduce using rule 4
	integer_literalreduce using rule 4
	string_literal reduce using rule 4
	class          reduce using rule 4
	if             reduce using rule 4
	while          reduce using rule 4
	return         reduce using rule 4
	typecase       reduce using rule 4
	not            reduce using rule 4
	'-'            reduce using rule 4
	'('            reduce using rule 4
	%eof           reduce using rule 4


State 27

	ClassBody -> '{' . Stmts Method '}'                 (rule 12)

	ident          reduce using rule 19
	integer_literalreduce using rule 19
	string_literal reduce using rule 19
	def            reduce using rule 19
	if             reduce using rule 19
	while          reduce using rule 19
	return         reduce using rule 19
	typecase       reduce using rule 19
	not            reduce using rule 19
	'-'            reduce using rule 19
	'}'            reduce using rule 19
	'('            reduce using rule 19

	Stmts          goto state 28

State 28

	ClassBody -> '{' Stmts . Method '}'                 (rule 12)
	Stmts -> Stmts . Stmt                               (rule 20)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	def            reduce using rule 13
	if             shift, and enter state 18
	while          shift, and enter state 19
	return         shift, and enter state 20
	typecase       shift, and enter state 21
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'}'            reduce using rule 13
	'('            shift, and enter state 24

	Method         goto state 86
	Stmt           goto state 10
	IfStmt         goto state 11
	Typecase       goto state 12
	LExpr          goto state 13
	RExpr          goto state 14

State 29

	ClassSignature -> CS extends ident .                (rule 6)

	'{'            reduce using rule 6


State 30

	RExpr -> LExpr .                                    (rule 43)

	and            reduce using rule 43
	or             reduce using rule 43
	'+'            reduce using rule 43
	'-'            reduce using rule 43
	'*'            reduce using rule 43
	'/'            reduce using rule 43
	'=='           reduce using rule 43
	'>='           reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'>'            reduce using rule 43
	'{'            reduce using rule 43
	')'            reduce using rule 43
	','            reduce using rule 43
	';'            reduce using rule 43
	'.'            reduce using rule 43


State 31

	LExpr -> RExpr . '.' ident                          (rule 40)
	RExpr -> RExpr . '+' RExpr                          (rule 44)
	RExpr -> RExpr . '-' RExpr                          (rule 45)
	RExpr -> RExpr . '*' RExpr                          (rule 46)
	RExpr -> RExpr . '/' RExpr                          (rule 47)
	RExpr -> '(' RExpr . ')'                            (rule 49)
	RExpr -> RExpr . '==' RExpr                         (rule 50)
	RExpr -> RExpr . '<=' RExpr                         (rule 51)
	RExpr -> RExpr . '<' RExpr                          (rule 52)
	RExpr -> RExpr . '>=' RExpr                         (rule 53)
	RExpr -> RExpr . '>' RExpr                          (rule 54)
	RExpr -> RExpr . and RExpr                          (rule 55)
	RExpr -> RExpr . or RExpr                           (rule 56)
	RExpr -> RExpr . '.' ident '(' ActualArgs ')'       (rule 58)

	and            shift, and enter state 40
	or             shift, and enter state 41
	'+'            shift, and enter state 42
	'-'            shift, and enter state 43
	'*'            shift, and enter state 44
	'/'            shift, and enter state 45
	'=='           shift, and enter state 46
	'>='           shift, and enter state 47
	'<'            shift, and enter state 48
	'<='           shift, and enter state 49
	'>'            shift, and enter state 50
	')'            shift, and enter state 85
	'.'            shift, and enter state 52


State 32

	LExpr -> RExpr . '.' ident                          (rule 40)
	RExpr -> RExpr . '+' RExpr                          (rule 44)
	RExpr -> RExpr . '-' RExpr                          (rule 45)
	RExpr -> RExpr . '*' RExpr                          (rule 46)
	RExpr -> RExpr . '/' RExpr                          (rule 47)
	RExpr -> '-' RExpr .                                (rule 48)
	RExpr -> RExpr . '==' RExpr                         (rule 50)
	RExpr -> RExpr . '<=' RExpr                         (rule 51)
	RExpr -> RExpr . '<' RExpr                          (rule 52)
	RExpr -> RExpr . '>=' RExpr                         (rule 53)
	RExpr -> RExpr . '>' RExpr                          (rule 54)
	RExpr -> RExpr . and RExpr                          (rule 55)
	RExpr -> RExpr . or RExpr                           (rule 56)
	RExpr -> RExpr . '.' ident '(' ActualArgs ')'       (rule 58)

	and            reduce using rule 48
	or             reduce using rule 48
	'+'            reduce using rule 48
	'-'            reduce using rule 48
	'*'            reduce using rule 48
	'/'            reduce using rule 48
	'=='           reduce using rule 48
	'>='           reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'>'            reduce using rule 48
	'{'            reduce using rule 48
	')'            reduce using rule 48
	','            reduce using rule 48
	';'            reduce using rule 48
	'.'            reduce using rule 48


State 33

	LExpr -> RExpr . '.' ident                          (rule 40)
	RExpr -> RExpr . '+' RExpr                          (rule 44)
	RExpr -> RExpr . '-' RExpr                          (rule 45)
	RExpr -> RExpr . '*' RExpr                          (rule 46)
	RExpr -> RExpr . '/' RExpr                          (rule 47)
	RExpr -> RExpr . '==' RExpr                         (rule 50)
	RExpr -> RExpr . '<=' RExpr                         (rule 51)
	RExpr -> RExpr . '<' RExpr                          (rule 52)
	RExpr -> RExpr . '>=' RExpr                         (rule 53)
	RExpr -> RExpr . '>' RExpr                          (rule 54)
	RExpr -> RExpr . and RExpr                          (rule 55)
	RExpr -> RExpr . or RExpr                           (rule 56)
	RExpr -> not RExpr .                                (rule 57)
	RExpr -> RExpr . '.' ident '(' ActualArgs ')'       (rule 58)

	and            reduce using rule 57
	or             reduce using rule 57
	'+'            shift, and enter state 42
	'-'            shift, and enter state 43
	'*'            shift, and enter state 44
	'/'            shift, and enter state 45
	'=='           shift, and enter state 46
	'>='           shift, and enter state 47
	'<'            shift, and enter state 48
	'<='           shift, and enter state 49
	'>'            shift, and enter state 50
	'{'            reduce using rule 57
	')'            reduce using rule 57
	','            reduce using rule 57
	';'            reduce using rule 57
	'.'            shift, and enter state 52


State 34

	Typecase -> typecase RExpr . '{' TypeAlternative '}'    (rule 36)
	LExpr -> RExpr . '.' ident                          (rule 40)
	RExpr -> RExpr . '+' RExpr                          (rule 44)
	RExpr -> RExpr . '-' RExpr                          (rule 45)
	RExpr -> RExpr . '*' RExpr                          (rule 46)
	RExpr -> RExpr . '/' RExpr                          (rule 47)
	RExpr -> RExpr . '==' RExpr                         (rule 50)
	RExpr -> RExpr . '<=' RExpr                         (rule 51)
	RExpr -> RExpr . '<' RExpr                          (rule 52)
	RExpr -> RExpr . '>=' RExpr                         (rule 53)
	RExpr -> RExpr . '>' RExpr                          (rule 54)
	RExpr -> RExpr . and RExpr                          (rule 55)
	RExpr -> RExpr . or RExpr                           (rule 56)
	RExpr -> RExpr . '.' ident '(' ActualArgs ')'       (rule 58)

	and            shift, and enter state 40
	or             shift, and enter state 41
	'+'            shift, and enter state 42
	'-'            shift, and enter state 43
	'*'            shift, and enter state 44
	'/'            shift, and enter state 45
	'=='           shift, and enter state 46
	'>='           shift, and enter state 47
	'<'            shift, and enter state 48
	'<='           shift, and enter state 49
	'>'            shift, and enter state 50
	'{'            shift, and enter state 84
	'.'            shift, and enter state 52


State 35

	Stmt -> return RExpr . ';'                          (rule 27)
	LExpr -> RExpr . '.' ident                          (rule 40)
	RExpr -> RExpr . '+' RExpr                          (rule 44)
	RExpr -> RExpr . '-' RExpr                          (rule 45)
	RExpr -> RExpr . '*' RExpr                          (rule 46)
	RExpr -> RExpr . '/' RExpr                          (rule 47)
	RExpr -> RExpr . '==' RExpr                         (rule 50)
	RExpr -> RExpr . '<=' RExpr                         (rule 51)
	RExpr -> RExpr . '<' RExpr                          (rule 52)
	RExpr -> RExpr . '>=' RExpr                         (rule 53)
	RExpr -> RExpr . '>' RExpr                          (rule 54)
	RExpr -> RExpr . and RExpr                          (rule 55)
	RExpr -> RExpr . or RExpr                           (rule 56)
	RExpr -> RExpr . '.' ident '(' ActualArgs ')'       (rule 58)

	and            shift, and enter state 40
	or             shift, and enter state 41
	'+'            shift, and enter state 42
	'-'            shift, and enter state 43
	'*'            shift, and enter state 44
	'/'            shift, and enter state 45
	'=='           shift, and enter state 46
	'>='           shift, and enter state 47
	'<'            shift, and enter state 48
	'<='           shift, and enter state 49
	'>'            shift, and enter state 50
	';'            shift, and enter state 83
	'.'            shift, and enter state 52


State 36

	Stmt -> return ';' .                                (rule 26)

	ident          reduce using rule 26
	integer_literalreduce using rule 26
	string_literal reduce using rule 26
	def            reduce using rule 26
	if             reduce using rule 26
	while          reduce using rule 26
	return         reduce using rule 26
	typecase       reduce using rule 26
	not            reduce using rule 26
	'-'            reduce using rule 26
	'}'            reduce using rule 26
	'('            reduce using rule 26
	%eof           reduce using rule 26


State 37

	Stmt -> while RExpr . StmtBlock                     (rule 22)
	LExpr -> RExpr . '.' ident                          (rule 40)
	RExpr -> RExpr . '+' RExpr                          (rule 44)
	RExpr -> RExpr . '-' RExpr                          (rule 45)
	RExpr -> RExpr . '*' RExpr                          (rule 46)
	RExpr -> RExpr . '/' RExpr                          (rule 47)
	RExpr -> RExpr . '==' RExpr                         (rule 50)
	RExpr -> RExpr . '<=' RExpr                         (rule 51)
	RExpr -> RExpr . '<' RExpr                          (rule 52)
	RExpr -> RExpr . '>=' RExpr                         (rule 53)
	RExpr -> RExpr . '>' RExpr                          (rule 54)
	RExpr -> RExpr . and RExpr                          (rule 55)
	RExpr -> RExpr . or RExpr                           (rule 56)
	RExpr -> RExpr . '.' ident '(' ActualArgs ')'       (rule 58)

	and            shift, and enter state 40
	or             shift, and enter state 41
	'+'            shift, and enter state 42
	'-'            shift, and enter state 43
	'*'            shift, and enter state 44
	'/'            shift, and enter state 45
	'=='           shift, and enter state 46
	'>='           shift, and enter state 47
	'<'            shift, and enter state 48
	'<='           shift, and enter state 49
	'>'            shift, and enter state 50
	'{'            shift, and enter state 81
	'.'            shift, and enter state 52

	StmtBlock      goto state 82

State 38

	IfStmt -> if RExpr . StmtBlock                      (rule 29)
	LExpr -> RExpr . '.' ident                          (rule 40)
	RExpr -> RExpr . '+' RExpr                          (rule 44)
	RExpr -> RExpr . '-' RExpr                          (rule 45)
	RExpr -> RExpr . '*' RExpr                          (rule 46)
	RExpr -> RExpr . '/' RExpr                          (rule 47)
	RExpr -> RExpr . '==' RExpr                         (rule 50)
	RExpr -> RExpr . '<=' RExpr                         (rule 51)
	RExpr -> RExpr . '<' RExpr                          (rule 52)
	RExpr -> RExpr . '>=' RExpr                         (rule 53)
	RExpr -> RExpr . '>' RExpr                          (rule 54)
	RExpr -> RExpr . and RExpr                          (rule 55)
	RExpr -> RExpr . or RExpr                           (rule 56)
	RExpr -> RExpr . '.' ident '(' ActualArgs ')'       (rule 58)

	and            shift, and enter state 40
	or             shift, and enter state 41
	'+'            shift, and enter state 42
	'-'            shift, and enter state 43
	'*'            shift, and enter state 44
	'/'            shift, and enter state 45
	'=='           shift, and enter state 46
	'>='           shift, and enter state 47
	'<'            shift, and enter state 48
	'<='           shift, and enter state 49
	'>'            shift, and enter state 50
	'{'            shift, and enter state 81
	'.'            shift, and enter state 52

	StmtBlock      goto state 80

State 39

	RExpr -> ident '(' . ActualArgs ')'                 (rule 59)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24
	')'            reduce using rule 60

	LExpr          goto state 30
	RExpr          goto state 78
	ActualArgs     goto state 79

State 40

	RExpr -> RExpr and . RExpr                          (rule 55)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 77

State 41

	RExpr -> RExpr or . RExpr                           (rule 56)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 76

State 42

	RExpr -> RExpr '+' . RExpr                          (rule 44)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 75

State 43

	RExpr -> RExpr '-' . RExpr                          (rule 45)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 74

State 44

	RExpr -> RExpr '*' . RExpr                          (rule 46)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 73

State 45

	RExpr -> RExpr '/' . RExpr                          (rule 47)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 72

State 46

	RExpr -> RExpr '==' . RExpr                         (rule 50)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 71

State 47

	RExpr -> RExpr '>=' . RExpr                         (rule 53)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 70

State 48

	RExpr -> RExpr '<' . RExpr                          (rule 52)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 69

State 49

	RExpr -> RExpr '<=' . RExpr                         (rule 51)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 68

State 50

	RExpr -> RExpr '>' . RExpr                          (rule 54)

	ident          shift, and enter state 15
	integer_literalshift, and enter state 16
	string_literal shift, and enter state 17
	not            shift, and enter state 22
	'-'            shift, and enter state 23
	'('            shift, and enter state 24

	LExpr          goto state 30
	RExpr          goto state 67

State 51

	Stmt -> RExpr ';' .                                 (rule 25)

	ident          reduce using rule 25
	integer_literalreduce using rule 25
	string_literal reduce using rule 25
	def            reduce using rule 25
	if             reduce using rule 25
	while          reduce using rule 25
	return         reduce using rule 25
	typecase       reduce using rule 25
	not            reduce using rule 25
	'-'            reduce using rule 25
	'}'            reduce using rule 25
	'('            reduce using rule 25
	%eof           reduce using rule 25


State 52

	LExpr -> RExpr '.' . ident                          (rule 40)
	RExpr -> RExpr '.' . ident '(' ActualArgs ')'       (rule 58)

	ident          shift, and enter state 66


State 53

	Stmt -> LExpr AStmt .                               (rule 23)
